# tre_output_airlock

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  VALIDATION.md  docker-compose.yml
.bootstrap/: payload.part00  payload.part12
.delivery/: part00  part01  part02  part03  part030  part031  part032  part033  part0330  part0331  part0332  part0333  part04  payload.b64  trigger.txt
.delivery/v040/: fixed-01  fixed-02-00  fixed-02-01  fixed-02-02  patch-00  patch-01  ready
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: apply-v040.yml  bootstrap-source.yml  capture-pages.yml  ci.yml  clinical-genomic-pipeline.yml  collect-pages-files.yml  collect-pages-status.yml  export-source.yml  fix-api-imports.yml  pages.yml  prepare-delivery.yml  publish-pages-screenshots.yml  refresh-pytest-lock.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  db.py  evaluation.py  main.py  models.py  schemas.py
backend/app/api/: common.py  operations_routes.py  policy_routes.py  review_routes.py  routes.py  submission_routes.py
backend/app/core/: auth.py  config.py  logging.py  policy.py  telemetry.py
backend/app/rules/: base.py  common.py  csv_rules.py  document_rules.py
backend/app/services/: audit.py  checker.py  reports.py  storage.py
backend/tests/: conftest.py  test_api.py  test_evaluation.py  test_rules.py
benchmark/: manifest.json  results.json
bootstrap/: part-00  part-01  part-02  part-03  part-04  part-05  part-06
clinical_genomic_pipeline/: README.md  pyproject.toml
clinical_genomic_pipeline/reference/: README.md  terminology_map.csv
clinical_genomic_pipeline/samples/: fhir_bundle.json  genomic_manifest.csv
clinical_genomic_pipeline/samples/genomics/: sample_001.vcf
clinical_genomic_pipeline/src/clinical_genomic_pipeline/: __init__.py  cli.py  contracts.py  fhir.py  flow.py  genomics.py  hashing.py  lineage.py  models.py  omop.py  operations.py  pipeline.py  storage.py  terminology.py  transfer.py
clinical_genomic_pipeline/tests/: test_pipeline.py
docs/: architecture.md  clinical-genomic-platform.md  decision-policy.md  pages-live-verification.json  production-readiness.md  runbook.md  threat-model.md
docs/adr/: 0005-clinical-genomic-data-contract.md  0006-contract-drift-and-operations.md  0007-jd-data-engineering-services.md  001-separate-checks-from-policy.md  002-claim-and-optimistic-concurrency.md  003-tamper-evident-evidence.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: DecisionBadge.tsx  DetailPanel.tsx  IdentityBar.tsx  MetricCard.tsx  OperationsPanel.tsx  PolicyCatalogue.tsx  PolicyLab.tsx  ReviewQueue.tsx  RiskBadge.tsx  SubmissionTable.tsx  UploadPanel.tsx
frontend/src/lib/: api.ts  (+6 more)
infra/aws/: README.md  quarantine-baseline.yml
samples/: contact_in_notes.txt  date_of_birth.txt  high_uniqueness.csv  participant_level_export.csv  postcode_in_notes.txt  safe_summary.csv  small_cell_table.csv  spreadsheet_formula.csv
scripts/: export_openapi.py
(+9 files in other folders)
