[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "tre-output-airlock-api"
version = "0.3.0"
description = "A production-minded output-checking demonstration for trusted research environments."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "pypdf>=5.4,<7.0",
  "pillow>=11.1,<13.0",
  "psycopg[binary]>=3.2,<4.0",
  "alembic>=1.14,<2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<10.0",
  "pytest-cov>=6.0,<8.0",
  "ruff>=0.9,<1.0",
  "mypy>=1.14,<2.0",
  "pip-audit>=2.7,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
