[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-genomic-ingestion-demo"
version = "0.2.0"
description = "Synthetic clinical-genomic ingestion, validation, de-identification and lineage demo."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
orchestration = ["prefect>=3.4,<4.0"]
dev = [
  "mypy>=1.14,<2.0",
  "ruff>=0.9,<1.0",
]

[project.scripts]
clinical-genomic-pipeline = "clinical_genomic_pipeline.cli:main"
clinical-genomic-operations = "clinical_genomic_pipeline.operations:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
packages = ["clinical_genomic_pipeline"]
