[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-genomic-ingestion-demo"
version = "0.3.0"
description = "Synthetic clinical-genomic transfer, standardisation, quality and lineage demo."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
orchestration = ["prefect>=3.4,<4.0"]
aws = ["boto3>=1.35,<2.0"]
dev = [
  "mypy>=1.14,<2.0",
  "ruff>=0.9,<1.0",
]

[project.scripts]
clinical-genomic-pipeline = "clinical_genomic_pipeline.cli:main"
clinical-genomic-operations = "clinical_genomic_pipeline.operations:main"
clinical-genomic-transfer-receipt = "clinical_genomic_pipeline.transfer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
packages = ["clinical_genomic_pipeline"]
